[package]
name = "athlete"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
cfg-if = "1.0.0"
clap = { version = "4.5.3", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.30"
hex = "0.4.3"
humansize = "2.1.3"
monostate = "0.1.11"
reqwest = { version = "0.11.26", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
